--- a/subsys/nonsecure/CMakeLists.txt
+++ b/subsys/nonsecure/CMakeLists.txt
@@ -4,7 +4,7 @@
 # SPDX-License-Identifier: LicenseRef-BSD-5-Clause-Nordic
 #
 
-if(CONFIG_ARM_FIRMWARE_USES_SECURE_ENTRY_FUNCS)
+if(CONFIG_SPM AND CONFIG_ARM_FIRMWARE_USES_SECURE_ENTRY_FUNCS)
   zephyr_sources(secure_services_ns.c)
 
   add_dependencies(zephyr_interface spm_subimage)
