lib: fota_download: Added an 'offload' configuration for not building library
So the APIs are implicitly available -- and dependencies on FOTA_DOWNLOAD will
be met -- but the nRF Connect SDK library doesn't need to be built and used
directly. This allows other means of FOTA handling to be used.

--- a/subsys/net/lib/fota_download/Kconfig
+++ b/subsys/net/lib/fota_download/Kconfig
@@ -6,10 +6,18 @@
 
 menuconfig FOTA_DOWNLOAD
 	bool "FOTA Download"
+
+if (FOTA_DOWNLOAD)
+
+config FOTA_DOWNLOAD_NRF
+	bool "NRF FOTA Download"
 	depends on DOWNLOAD_CLIENT
 	depends on DFU_TARGET
 
-if (FOTA_DOWNLOAD)
+config FOTA_DOWNLOAD_OFFLOAD
+	bool "External FOTA Download"
+	depends on !FOTA_DOWNLOAD_NRF
+	default y
 
 config FOTA_SOCKET_RETRIES
 	int "Number of retries for socket-related download issues"
